# series-store

./: Cargo.toml  README.md
src/: lib.rs  util.rs
