[package]
name = "series-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
itertools = "0.13.0"
rdkafka = { version = "0.36.2", default-features = false, features = ["tokio", "cmake-build"] }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
serde_json = "1.0.117"

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
